--- a/src/com/Product/form/HoaDonForm.form
+++ b/src/com/Product/form/HoaDonForm.form
@@ -509,11 +509,10 @@
             <Component class="com.Product.GUI.Combobox" name="cbox_hoaDon">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="4">
+                  <StringArray count="3">
                     <StringItem index="0" value="Ch&#x1b0;a Thanh To&#xe1;n"/>
                     <StringItem index="1" value="&#x110;&#xe3; Thanh To&#xe1;n"/>
                     <StringItem index="2" value="Tat Ca"/>
-                    <StringItem index="3" value=" "/>
                   </StringArray>
                 </Property>
                 <Property name="lineColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
@@ -527,9 +526,10 @@
             <Component class="com.Product.GUI.Combobox" name="cb_httt">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="2">
+                  <StringArray count="3">
                     <StringItem index="0" value="Ti&#x1ec1;n M&#x1eb7;t"/>
                     <StringItem index="1" value="Chuy&#x1ec3;n Kho&#x1ea3;n"/>
+                    <StringItem index="2" value="Tat Ca"/>
                   </StringArray>
                 </Property>
               </Properties>
